--- a/Frontend/src/app/login/login.component.scss
+++ b/Frontend/src/app/login/login.component.scss
@@ -1,10 +1,12 @@
 .login-panel {
-    margin: auto;
+    height: 100vh;
     text-align: center;
-    width: 20%;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-.ui-inputgroup {
-    margin-bottom: 10px;
-    margin-left: 35px;
+    > * {
+        margin-bottom: 5px;
+    }
 }
