--- a/Frontend/src/app/sites/registration/registration.component.html
+++ b/Frontend/src/app/sites/registration/registration.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="ui-inputgroup">
     <span class="ui-inputgroup-addon"><i class="fa fa-key"></i></span>
-    <input pPassword type="password" size="25" [feedback]=true placeholder="Re-Password"/>
+    <input pPassword type="password" size="25" [feedback]=false placeholder="Re-Password"/>
   </div>
   <div class="ui-inputgroup">
     <span class="ui-inputgroup-addon"><font size=1>Email</font></span>
