--- a/Frontend/src/app/sites/emailconfirm/failed/failed.component.html
+++ b/Frontend/src/app/sites/emailconfirm/failed/failed.component.html
@@ -1,3 +1,8 @@
-<p>
-  failed works!
-</p>
+<!DOCTYPE html>
+<html>
+  <div class="failed">
+    <img src="../../../../assets/red-cross.png" alt="big red cross" width="400" height="400" />
+    <h3>Email can not to be confirmed!</h3>
+    <p-button (click)="goToPage('')" label="Go to the main page"></p-button>
+  </div>
+</html>
