fix some component html

--- a/Frontend/src/app/sites/page-not-found/page-not-found.component.html
+++ b/Frontend/src/app/sites/page-not-found/page-not-found.component.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<style>
-body {
-  background-image: url("../../../assets/dead_link.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-</style>
-<html>
-  <body>
-    <div class="PageNotFound">
-      <p-button (click)="goToPage('')" label="Go to the main page"></p-button>
-    </div>
-  </body>
-</html>
+<div class="PageNotFound">
+  <div class="PageNotFound-inner">
+    <p-button (click)="goToPage('')" label="Go to the main page"></p-button>
+  </div>
+</div>
