--- a/Frontend/src/app/sites/page-not-found/page-not-found.component.scss
+++ b/Frontend/src/app/sites/page-not-found/page-not-found.component.scss
@@ -17,7 +17,7 @@
       justify-content: center;
       align-items: center;
 
-      background-image: url("../../../assets/dead_link.jpg");
+      background-image: url("../../../assets/images/dead_link.jpg");
       background-repeat: no-repeat;
       background-position: center;
 
