--- a/Frontend/src/app/sites/emailconfirm/failed/failed.component.html
+++ b/Frontend/src/app/sites/emailconfirm/failed/failed.component.html
@@ -1,5 +1,5 @@
 <div class="failed">
-  <img src="../../../../assets/red-cross.png" alt="big red cross" width="400" height="400" />
+  <img src="../../../../assets/images/red-cross.png" alt="big red cross" width="400" height="400" />
   <h3>Email can not to be confirmed!</h3>
   <p-button (click)="goToPage('')" label="Go to the main page"></p-button>
 </div>
