--- a/Frontend/src/app/sites/emailconfirm/success/success.component.html
+++ b/Frontend/src/app/sites/emailconfirm/success/success.component.html
@@ -1,5 +1,5 @@
 <div class="success">
-  <img src="../../../../assets/green-tick.png" alt="big green tick" width="400" height="400" />
+  <img src="../../../../assets/images/green-tick.png" alt="big green tick" width="400" height="400" />
   <h3>Email confirmed successfully!</h3>
   <p-button (click)="goToPage('login')" label="Go to the login page"></p-button>
 </div>
