--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -4,3 +4,70 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Open-sans", arial;
+}
+
+h1 {
+  margin: 10px;
+  color: #555;
+}
+h2 {
+  margin: 20px;
+  color: #888;
+}
+
+.layout-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  .layout-topbar {
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    z-index: 30;
+  }
+
+  .layout-site {
+    display: flex;
+
+    flex-grow: 1;
+    background: green;
+  }
+
+}
+
+.layout-sidebar {
+  width: 300px;
+  background: #fafafa;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+  z-index: 10;
+  padding-top: 20px;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.layout-content {
+  width: 0px;
+  display: flex;
+  flex-direction: column;
+
+  flex-grow: 1;
+  background: #eee;
+  height: 100%;
+  overflow: auto;
+
+  .layout-content-inner {
+    flex-grow: 1;
+  }
+
+  .layout-footer {
+    padding: 10px;
+    text-align: center;
+  }
+
+  .layout-card-container {
+    margin: 20px;
+  }
+}
