make frontend menubar

--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -1,12 +1,5 @@
 <div class="layout-wrapper">
-  <div class="layout-topbar">
-    <p-menubar [model]="items">
-      <div>
-        <input type="text" pInputText placeholder="Search">
-        <button pButton label="Logout" icon="fa fa-sign-out" style="margin-left:.25em"></button>
-      </div>
-    </p-menubar>
-  </div>
+  <menubar class="layout-topbar"></menubar>
   <div class="layout-site">
     <div class="layout-sidebar">
       <p-panelMenu [model]="PanelMenu"></p-panelMenu>
