--- a/Frontend/src/app/sites/project-site/project-site.component.html
+++ b/Frontend/src/app/sites/project-site/project-site.component.html
@@ -12,11 +12,11 @@
                     <div *ngFor="let item of Project.widgets" class="ui-g-12 ui-md-6 ui-lg-4 ui-xl-3">
 
                         <div>
-                            <p-card header="{{item.title}}" subheader="{{item.created}}" [style]="{width: auto}" styleClass="ui-card-shadow ui-own-card-ani">
+                            <p-card header="{{item.title}}" subheader="{{item.date}}" [style]="{width: auto}" styleClass="ui-card-shadow ui-own-card-ani">
                                 <p-header>
                                     <img src="Card" src="http://www.illuminationworksllc.com/wp-content/uploads/2017/04/ProjectManagement-1.jpg">
                                 </p-header>
-                                <div class="ui-description">{{item.description}}</div>
+                                <div class="ui-description">{{item.data}}</div>
                                 <p-footer class="align-right">
                                     <button pButton type="button" label="Edit" icon="pi pi-cog" style="margin-right: .25em"></button>
                                     <button pButton type="button" label="Delete" icon="pi pi-times" class="ui-button-secondary"></button>
