--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -11,13 +11,13 @@
         <h2>Own projects</h2>
         <div class="ui-g layout-card-container">
           <div *ngFor="let item of Projects.own" class="ui-g-12 ui-md-6 ui-lg-4 ui-xl-3">
-            <p-card header="{{item.title}}" subheader="{{item.created}}" [style]="{width: auto}" styleClass="ui-card-shadow ui-own-card-ani">
+            <p-card header="{{item.title}}" subheader="{{item.created}}" [style]="{width: auto}" styleClass="ui-card-shadow ui-own-card-ani" (click)="openProject(item)">
               <p-header>
                 <img src="Card" src="http://www.illuminationworksllc.com/wp-content/uploads/2017/04/ProjectManagement-1.jpg">
               </p-header>
               <div class="ui-description">{{item.description}}</div>
               <p-footer class="align-right">
-                <button pButton type="button" label="Edit" icon="pi pi-cog" style="margin-right: .25em" (click)="showDialog(item)"></button>
+                <button pButton type="button" label="Edit" icon="pi pi-cog" style="margin-right: .25em" (click)="showDialog(item, $event)"></button>
                 <button pButton type="button" label="Delete" icon="pi pi-times" class="ui-button-secondary"></button>
               </p-footer>
             </p-card>
