use logo and icon

--- a/Frontend/src/app/sites/login/login.component.html
+++ b/Frontend/src/app/sites/login/login.component.html
@@ -1,5 +1,6 @@
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="login-panel">
+  <img class="mm-logo" src="../assets/images/mm.png">
   <h3 class="first">Login</h3>
   <form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
       <div class="form-group">
