--- a/Frontend/src/app/sites/registration/registration.component.html
+++ b/Frontend/src/app/sites/registration/registration.component.html
@@ -1,5 +1,6 @@
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="registration-panel">
+  <img class="mm-logo" src="../assets/images/mm.png">
   <h3 class="first">Registration</h3>
   <form [formGroup]="registrationForm" (ngSubmit)="submitRegistration()">
     <div class="form-group">
