--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -198,6 +198,7 @@ menubar p-menubar {
       &.menu-logo {
         margin: 0 10px !important;
         display: block;
+        cursor: pointer;
       }
     }
   }
