--- a/Frontend/src/app/sites/registration/registration.component.scss
+++ b/Frontend/src/app/sites/registration/registration.component.scss
@@ -14,4 +14,10 @@
     margin-left: 20px;
     margin-top: 20px;
   }
+
+  .mm-logo {
+    width:80%;
+    height: auto;
+    max-width: 800px;
+  }
 }
