--- a/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
+++ b/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
@@ -28,5 +28,5 @@
     <button pButton type="button" label="Save" class="ui-button-success"></button>
 </div>
 <div>
-    <button pButton type="button" label="Cancel" class="ui-button-danger"></button>
+    <button pButton type="button" label="Cancel" class="ui-button-danger" (click)="cancelEdit()"></button>
 </div>
