--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -23,7 +23,7 @@
             </p-card>
           </div>
           <div class="ui-g-12 ui-md-6 ui-lg-4 ui-xl-3">
-            <p-card id="addProjectCard" header="New project" subheader="" [style]="{width: auto}" styleClass="ui-card-shadow">
+            <p-card id="addProjectCard" header="New project" subheader="" [style]="{width: auto}" styleClass="ui-card-shadow" (click)="showDialog()">
               <p-header></p-header>
             </p-card>
           </div>
