minor changes, panelmenu logout implemented

--- a/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
+++ b/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
@@ -8,7 +8,7 @@
     <label for="description">
         Description
     </label>
-    <textarea pInputTextarea>{{project.description}}</textarea>
+    <textarea pInputTextarea [(ngModel)]="project.description"></textarea>
 </div>
 <div>
     <label for="category">
