--- a/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
+++ b/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
@@ -1,32 +1,30 @@
-<div>
+<div class="form-group">
     <label for="title">
         Title
     </label>
     <input id="input" type="text" size="30" pInputText [(ngModel)]="project.title">
 </div>
-<div>
+<div class="form-group">
     <label for="description">
         Description
     </label>
     <textarea pInputTextarea [(ngModel)]="project.description"></textarea>
 </div>
-<div>
+<div class="form-group">
     <label for="category">
         Category
     </label>
     <p-selectButton [options]="categories" [(ngModel)]="project.category"></p-selectButton>
     <!-- <p>Selected Type: <span style="font-weight: bold">{{project.category}}</span></p> -->
 </div>
-<div>
+<div class="form-group">
     <label for="priority">
         Priority
     </label>
     <p-selectButton [options]="priorities" [(ngModel)]="project.priority"></p-selectButton>
     <!-- <p>Selected Type: <span style="font-weight: bold">{{project.category}}</span></p> -->
 </div>
-<div>
+<div class="form-group">
     <button pButton type="button" label="Save" class="ui-button-success"></button>
-</div>
-<div>
     <button pButton type="button" label="Cancel" class="ui-button-danger"></button>
 </div>
