--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -110,6 +110,23 @@ $close-sidebar-smaller: 1200px;
 
   .layout-card-container {
     margin: 20px;
+
+    app-widget-router {
+      width: 100%;
+      max-width: 900px;
+      margin: 0 auto 20px auto;
+      min-height: 110px;
+      display: block;
+      position: relative;
+      background: #fff;
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+      border: solid #c8c8c8 1px;
+      border-radius: 3px;
+
+      &:hover .widget-buttons {
+        opacity: 1;
+      }
+    }
   }
 }
 
