--- a/Frontend/src/app/sites/project-site/project-site.component.html
+++ b/Frontend/src/app/sites/project-site/project-site.component.html
@@ -33,3 +33,9 @@
         </div>
     </div>
 </div>
+
+<p-dialog header="Edit user" [(visible)]="DisplayUserHandling" [modal]="true" (onAfterHide)="exitcallback()">
+    <app-user-handling></app-user-handling>
+</p-dialog>
+  
+  <p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
