--- a/Frontend/src/app/sites/user-handling/user-handling.component.html
+++ b/Frontend/src/app/sites/user-handling/user-handling.component.html
@@ -1,3 +1,4 @@
-<p>
-  user-handling works!
-</p>
+<div class="form-group">
+  <button pButton type="button" (click)="saveUserSettings()" label="Save" class="ui-button-success"></button>
+  <button pButton type="button" (click)="closeUserHandling()" label="Cancel" class="ui-button-danger"></button>
+</div>
