image widget created

--- a/Frontend/src/app/elements/widget-router/widget-router.component.html
+++ b/Frontend/src/app/elements/widget-router/widget-router.component.html
@@ -5,6 +5,7 @@
 <div class="widget-content">
   <div [ngSwitch]="widgetData.type">
     <app-text-widget [widgetData]="widgetData" *ngSwitchCase="'textWidget'">textWidget</app-text-widget>
+    <app-image-widget [widgetData]="widgetData" *ngSwitchCase="'imageWidget'">imageWidget</app-image-widget>
     <div *ngSwitchDefault>Error: Undefined widget type.</div>
   </div>
 </div>
