image widget improved

--- a/Frontend/src/app/elements/widgets/image-widget/image-widget.component.html
+++ b/Frontend/src/app/elements/widgets/image-widget/image-widget.component.html
@@ -1,3 +1,9 @@
-<p>
-  image-widget works!
-</p>
+<p-panel header="{{widgetData.title}}" [toggleable]="true">
+  <p-header>
+    <span>{{widgetData.date}}</span>
+  </p-header>
+  <img src="Card" [src]="widgetData.data" onerror="this.src='../assets/images/projectHeaderImage.jpg';">
+  <p-footer >
+    {{widgetData.comments}}
+  </p-footer>
+</p-panel>
