chart widget improved

--- a/Frontend/src/app/elements/widgets/chart-widget/chart-widget.component.html
+++ b/Frontend/src/app/elements/widgets/chart-widget/chart-widget.component.html
@@ -1,3 +1,9 @@
-<p>
-  chart-widget works!
-</p>
+<p-panel header="{{widgetData.title}}" [toggleable]="true">
+  <p-header>
+    <span>{{widgetData.date}}</span>
+  </p-header>
+  <p-chart type="pie" [data]="chartData"></p-chart>
+  <p-footer >
+    {{widgetData.comments}}
+  </p-footer>
+</p-panel>
