--- a/Frontend/src/app/sites/user-handling/user-handling.component.html
+++ b/Frontend/src/app/sites/user-handling/user-handling.component.html
@@ -1,7 +1,7 @@
-<div *ngFor="let item of TempUsers.users">
+<!-- <div *ngFor="let item of TempUsers.users">
   <p>{{item.id}}</p>
   <p>{{item.username}}</p>
-</div>
+</div> -->
 
 <!-- <p-dataView #dv [value]="TempUsers.users">
   <ng-template let-user pTemplate="listItem">
