--- a/Frontend/src/app/sites/project-site/project-site.component.html
+++ b/Frontend/src/app/sites/project-site/project-site.component.html
@@ -20,7 +20,7 @@
 </div>
 
 <p-dialog header="Edit user" [(visible)]="DisplayUserHandling" [modal]="true" (onAfterHide)="exitcallback()">
-    <app-user-handling></app-user-handling>
+    <app-user-handling [projectID]="Project"></app-user-handling>
 </p-dialog>
   
 <p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
