--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -56,7 +56,7 @@
 </p-dialog>
 
 <p-dialog header="Edit user" [(visible)]="showUserEdit" [modal]="true">
-  <app-user-settings></app-user-settings>
+  <app-user-settings #userSettings></app-user-settings>
 </p-dialog>
 
 <p-confirmDialog #cd [style]="{width: '50vw'}">
