--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -115,7 +115,7 @@ $close-sidebar-smaller: 1200px;
       width: 100%;
       max-width: 900px;
       margin: 0 auto 20px auto;
-      min-height: 110px;
+      min-height: 50px;
       display: block;
       position: relative;
       background: #fff;
@@ -125,6 +125,17 @@ $close-sidebar-smaller: 1200px;
 
       &:hover .widget-buttons {
         opacity: 1;
+      }
+      .widget-content {
+        .ui-widget-header {
+          display: flex;
+
+          p-header {
+            flex-grow: 1;
+            text-align: right;
+            padding-right: 10px;
+          }
+        }
       }
     }
   }
