--- a/Frontend/src/app/elements/widget-router/widget-router.component.html
+++ b/Frontend/src/app/elements/widget-router/widget-router.component.html
@@ -12,5 +12,5 @@
 </div>
 
 <p-dialog header="Title" [(visible)]="weVisible" [modal]="true">
-  <app-widget-editor id="popup" [widgetData]="selectedWidget"></app-widget-editor>
+  <app-widget-editor id="widget-editor" [widgetData]="selectedWidget"></app-widget-editor>
 </p-dialog>
