--- a/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
+++ b/Frontend/src/app/elements/pop-up-dialog/pop-up-dialog.component.html
@@ -34,6 +34,6 @@
     <!-- <p>Selected Type: <span style="font-weight: bold">{{project.category}}</span></p> -->
 </div>
 <div class="form-group">
-    <button pButton type="button" label="Save" class="ui-button-success"></button>
-    <button pButton type="button" label="Cancel" class="ui-button-danger"></button>
+    <button pButton type="button" (click)="saveUserSettings()" label="Save" class="ui-button-success"></button>
+    <button pButton type="button" (click)="closeUserSettings()" label="Cancel" class="ui-button-danger"></button>
 </div>
