--- a/Frontend/src/app/sites/index/index.component.html
+++ b/Frontend/src/app/sites/index/index.component.html
@@ -51,8 +51,8 @@
   </div>
 </div>
 
-<p-dialog header="Title" [(visible)]="display" [modal]="true">
-  <app-pop-up-dialog id="popup" [projectData]="selectedProject"></app-pop-up-dialog>
+<p-dialog header="Edit project" [(visible)]="showProjectEditModal" [modal]="true">
+  <app-pop-up-dialog id="popup" [projectData]="selectedProject" [closeCallback]="closeProjectEdit"></app-pop-up-dialog>
 </p-dialog>
 
 <p-dialog header="Edit user" [(visible)]="showUserEdit" [modal]="true">
