--- a/Frontend/src/app/sites/project-site/project-site.component.html
+++ b/Frontend/src/app/sites/project-site/project-site.component.html
@@ -18,3 +18,7 @@
         </div>
     </div>
 </div>
+
+<p-dialog header="Edit project" [(visible)]="showProjectEditModal" [modal]="true">
+  <app-pop-up-dialog id="popup" [projectData]="selectedProject" [closeCallback]="closeProjectEdit"></app-pop-up-dialog>
+</p-dialog>
